New model button works

--- a/experimental_gui.css
+++ b/experimental_gui.css
@@ -1,3 +1,8 @@
 td input[type="number"] {
   min-width: 70px;
 }
+
+#modelsTable, #concepts, #connections, 
+#inference, #simulation, #results {
+  display: none;
+}
